--- a/index.html
+++ b/index.html
@@ -434,16 +434,16 @@
             </div>
             <div class="sign-up">
                 <p class="social-header-footer">Подпишитесь на рассылку</p>
-                <div class="form-block">
-                    <form action="">
-                        <input class="sign-up-input" type="email" placeholder="E-mail">
-    
+                <div >
+                    <form action="" class="form-block">
+                        <input class="sign-up-input" type="email" placeholder="E-mail" required>
+                        <button type="submit" class="hero-button sign-up-button">
+                            <span>Подписаться</span>
+                            <svg class="sign-up-icon">
+                                <use href="./images/icons.svg#icon-send"></use>
+                        </button>
                     </form>
-                    <button type="button" class="hero-button sign-up-button">
-                        <span>Подписаться</span>
-                        <svg class="sign-up-icon">
-                            <use href="./images/icons.svg#icon-send"></use>
-                    </button>
+                    
                 </div>
             </div>
         </div>
